Bug 434360 - Image sequences : no transition available
Summary: Image sequences : no transition available
Status: RESOLVED FIXED
Alias: None
Product: kdenlive
Classification: Applications
Component: User Interface & Miscellaneous (other bugs)
Version First Reported In: 20.12.3
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Jean-Baptiste Mardelle
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-03-13 15:11 UTC by Alex
Modified: 2021-03-28 00:07 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 21.04
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alex 2021-03-13 15:11:15 UTC
On the image sequence properties panel, it is not possible to select a transition : the list is empty 


STEPS TO REPRODUCE
1. "Project" menu -> "Add image sequence"
2. Check "Dissolve" case
3. Check "Wipe" case
-> The list (Wipe) is empty : no transition available

OBSERVED RESULT
Image sequence is create with the default transition (crossfade)

EXPECTED RESULT
List not empty. The list should be similar to the associated wipe video transition

SOFTWARE/OS VERSIONS

Linux: Ubuntu 20.04.2 LTS 64bits
Gnome version 3.36.8

ADDITIONAL INFORMATION
Comment 1 Julius Künzel 2021-03-27 23:02:22 UTC
Git commit a996c2c98d47a39fdd5a84b8da161ed8de98d4b6 by Julius Künzel.
Committed on 27/03/2021 at 22:30.
Pushed by jlskuz into branch 'release/21.04'.

Fix wipes for slideshow clips

M  +35   -21   src/project/dialogs/slideshowclip.cpp

https://invent.kde.org/multimedia/kdenlive/commit/a996c2c98d47a39fdd5a84b8da161ed8de98d4b6