Fix wipes for slideshow clips

BUG: 434360